# txo-python-template

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  README_old.md  grok_refactor.py  in-depth-readme.md  module-dependency-diagram.md  pyproject.toml
ai/decided/: adr-records.md  adr_v3.md  in-depth-readme-example_v3.1.md  readme-example_v3.1.md  txo-business-adr_v3.1.md  txo-technical-standards_v3.1.md  utils-quick-reference_v3.1.md
ai/prompts/: ai-prompt-template_v3.1.1.md  ai-prompt-template_v3.1.md  refactoring-prompt-v2.xml  refactoring-xml-ai-prompt-v3.0.xml.md  txo-xml-prompt-v3.1.xml  txo-xml-prompt-v3.xml.txt  txo-xml-prompt_v2.0.xml.txt  txo_ai_prompt_v3.xml  txo_prompt_v3.xml.txt  v3-refactoring-ai-prompt.xml.txt
config/: log-redaction-patterns.json  logging-config.json  org-env-config-secrets_example.json  txo-edu-config-secrets_example.json  txo-edu-config.json  txo-test-config.json
examples/: try-me-script.py  try_me_script.py
schemas/: org-env-config-schema.json  org-env-minimal-config-schema.json
src/: test-github-script.py  test_github_script.py  test_v2_features_script.py  try_me_script.py
tests/: test_features.py  test_features_script.py  test_redaction_patterns.py  test_v2_features_script.py
utils/: __init__.py  api_common.py  api_factory.py  api_helpers.py  concurrency.py  config_loader.py  exceptions.py  grok_client.py  grok_test.py  load_n_save.py  logger.py  oauth_client_credentials.py  oauth_helpers.py  path_helpers.py  rate_limit_manager.py  rest_api_helpers.py  script_runner.py  url_helpers.py  validate_tko_compliance.py
(+9 files in other folders)
