[project]
name = "txo-python-template"
version = "0.1.0"
description = "Tentixo's default project structure and helper files"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.24.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pandas-stubs==2.2.3.250527",
    "platformdirs>=4.3.8",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
    "zeep>=4.3.1",
]
